--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "postinstall": "tsc --outDir ./build",
     "lint": "eslint --ext .ts,.js .",
     "lint-fix": "eslint --ext .ts,.js . --fix",
     "format": "prettier --write .",
