--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "e-calculator-schemas",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A package providing the schemas for the e-calculator application.",
   "main": "dist/e-calculator-schemas",
   "types": "dist/e-calculator-schemas",
   "scripts": {
     "build": "tsc",
-    "test": "ts-mocha tests/**/*.test.ts",
-    "coverage": "nyc npm test",
-    "cover:report": "nyc report --reporter=lcov --reporter=text",
+    "test": "jest --watch --runInBand",
+    "test:ci": "jest --runInBand",
+    "format": "prettier --write .",
     "lint": "eslint --ext .ts,.js .",
-    "prepare": "rm -r dist || true && npm run build && npm run test && npm run coverage && npm run lint"
+    "lint-fix": "eslint --ext .ts,.js . --fix",
+    "update:to:latest": "ncu -u && npm update && npm install && npm audit fix",
+    "prepare": "rm -r dist || true && npm run build && npm run test && npm run lint"
   },
   "publishConfig": {
     "access": "public"
@@ -22,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mr42/e-calculator-schemas"
+    "url": "https://git.ecogood.org/services/e-calculator-schemas"
   },
   "keywords": [
     "version",
@@ -31,30 +33,27 @@
   "author": "Michael Rudolph",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mr42/e-calculator-schemas/issues"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-unused-imports": "^1.1.4",
-    "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
-    "prettier": "2.3.2",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^4.4.3"
+    "url": "https://git.ecogood.org/services/e-calculator-schemas/issues"
   },
   "dependencies": {
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "ts-jest": "^29.0.5",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.5.0",
+    "prettier": "2.3.2",
+    "typescript": "^4.4.3"
   }
 }
