--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,5 @@
     "declaration": true,
     "outDir": "./dist"
   },
-  "exclude": [
-    "tests",
-    "dist",
-    "node_modules"
-  ]
+  "exclude": ["tests", "dist", "node_modules"]
 }
