--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .ts,.js .",
     "lint-fix": "eslint --ext .ts,.js . --fix",
     "update:to:latest": "ncu -u && npm update && npm install && npm audit fix",
-    "prepare": "rm -r dist || true && npm run build && npm run test:ci && npm run lint"
+    "prepare": "rm -r dist || true && yarn run build && yarn run test:ci && yarn run lint"
   },
   "publishConfig": {
     "access": "public"
@@ -36,10 +36,10 @@
     "url": "https://git.ecogood.org/services/e-calculator-schemas/issues"
   },
   "dependencies": {
+    "eslint-plugin-n": "^15.6.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
-    "ts-jest": "^29.0.5",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
@@ -54,6 +54,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.5.0",
     "prettier": "2.3.2",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.4.3"
   }
 }
