--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .ts,.js .",
     "lint-fix": "eslint --ext .ts,.js . --fix",
     "update:to:latest": "ncu -u && yarn update && yarn install && yarn audit fix",
-    "prepare": "rm -r dist || true && yarn run build && yarn run test:ci"
+    "prepare": "rm -r dist || true && yarn run build && yarn run test:ci && yarn run lint"
   },
   "publishConfig": {
     "access": "public"
