--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "e-calculator-schemas",
-  "version": "1.0.15",
+  "name": "@ecogood/e-calculator-schemas",
+  "version": "1.0.1",
   "description": "A package providing the schemas for the e-calculator application.",
   "main": "dist/e-calculator-schemas",
   "types": "dist/e-calculator-schemas",
