--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ecogood/e-calculator-schemas",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A package providing the schemas for the e-calculator application.",
   "main": "dist/e-calculator-schemas",
   "types": "dist/e-calculator-schemas",
@@ -37,7 +37,9 @@
   },
   "dependencies": {
     "eslint-plugin-n": "^15.6.1",
-    "zod": "^3.20.6"
+    "i18next": "^23.2.11",
+    "zod": "^3.20.6",
+    "zod-i18n-map": "^2.13.2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
