--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
   },
   "dependencies": {
     "eslint-plugin-n": "^15.6.1",
-    "i18next": "^23.2.11",
-    "zod": "^3.20.6",
-    "zod-i18n-map": "^2.13.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
