--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "jest --watch --runInBand",
     "test:ci": "jest --runInBand",
     "format": "prettier --write .",
-    "lint": "eslint --ext .ts,.js .",
-    "lint-fix": "eslint --ext .ts,.js . --fix",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "update:to:latest": "ncu -u && yarn update && yarn install && yarn audit fix",
     "prepare": "rm -r dist || true && yarn run build && yarn run test:ci && yarn run lint"
   },
@@ -36,25 +36,17 @@
     "url": "https://git.ecogood.org/services/e-calculator-schemas/issues"
   },
   "dependencies": {
-    "eslint-plugin-n": "^15.6.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^28.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "8.22.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint": "^9.4.0",
     "jest": "^29.5.0",
     "prettier": "2.3.2",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0"
   }
 }
