--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ecogood/e-calculator-schemas",
-  "version": "1.9.0",
+  "version": "2.0.0",
   "description": "A package providing the schemas for the e-calculator application.",
   "main": "dist/e-calculator-schemas",
   "types": "dist/e-calculator-schemas",
@@ -45,5 +45,8 @@
     "ts-jest": "^29.0.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
+  },
+  "dependencies": {
+    "zod": "^3.23.8"
   }
 }
