--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -3,10 +3,6 @@ on:
   push:
     branches: [ 'main' ]
 
-env:
-  NODE_VERSION: 18.7.0
-
-
 
 
 jobs:
@@ -14,7 +10,7 @@ jobs:
     name: Checks
     uses: ./.github/workflows/check-workflow.yml
     with:
-      node-version: ${{ env.NODE_VERSION }}
+      node-version: ${{ vars.NODE_VERSION }}
     secrets: inherit
   publish:
     name: Publish to NPM
@@ -24,7 +20,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
