--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ vars.NODE_VERSION }}
+          registry-url: https://registry.yarnpkg.com
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
@@ -28,6 +29,8 @@ jobs:
         run: yarn build
       - name: Publish
         run: yarn publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
 
 
 
