chore: Add `registry-url` and `always-auth` to publish-to-npm workflow for improved authentication

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ vars.NODE_VERSION }}
+          registry-url: 'https://registry.npmjs.org'
+          always-auth: true
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
