--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ vars.NODE_VERSION }}
           always-auth: true
           cache: 'yarn'
-          registry-url: 'https://registry.yarnpkg.com/:_authToken=${{ secrets.NPM_REGISTRY_TOKEN }}'
+          registry-url: 'https://registry.yarnpkg.com/'
       - name: Install dependencies
         run: yarn install
       - name: Build
