--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -13,6 +13,9 @@ jobs:
       node-version: ${{ vars.NODE_VERSION }}
     secrets: inherit
   publish:
+    permissions:
+      contents: read
+      id-token: write
     name: Publish to NPM
     needs: checks
     runs-on: ubuntu-latest
@@ -23,7 +26,7 @@ jobs:
           node-version: ${{ vars.NODE_VERSION }}
           always-auth: true
           cache: 'yarn'
-          registry-url: 'https://registry.yarnpkg.com/'
+          registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: yarn install
       - name: Build
