chore: Add `scope` configuration to publish-to-npm workflow

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -27,6 +27,7 @@ jobs:
           always-auth: true
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
+          scope: '@ecogood'
       - name: Install dependencies
         run: yarn install
       - name: Build
