--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://git.ecogood.org/services/e-calculator-schemas"
+    "url": "https://github.com/econgood-it/e-calculator-schema"
   },
   "keywords": [
     "version",
@@ -33,7 +33,7 @@
   "author": "Michael Rudolph",
   "license": "MIT",
   "bugs": {
-    "url": "https://git.ecogood.org/services/e-calculator-schemas/issues"
+    "url": "https://github.com/econgood-it/e-calculator-schema/issues"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
