--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: ${{ vars.NODE_VERSION }}
           cache: 'yarn'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://registry.yarnpkg.com'
       - name: Install dependencies
         run: yarn install
       - name: Build
