chore: Simplify publish-to-npm workflow, switch to npm CLI commands

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches: [ 'main' ]
 
-permissions:
-  id-token: write  # Required for OIDC
-  contents: read
 
 jobs:
   checks:
@@ -19,21 +16,19 @@ jobs:
       contents: read
       id-token: write
     name: Publish to NPM
-    needs: checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ vars.NODE_VERSION }}
-          cache: 'yarn'
-          registry-url: 'https://registry.yarnpkg.com'
+          registry-url: https://registry.npmjs.org
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --immutable
       - name: Build
         run: yarn build
       - name: Publish
-        run: yarn publish
+        run: npm publish --provenance
 
 
 
