--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -17,6 +17,7 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
+    needs: checks
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
@@ -28,7 +29,7 @@ jobs:
       - name: Build
         run: yarn build
       - name: Publish
-        run: npm publish
+        run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
 
