--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -17,12 +17,11 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    needs: checks
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ vars.NODE_VERSION }}
+          node-version: '23.5.0'
           registry-url: https://registry.npmjs.org
       - name: Install dependencies
         run: yarn install --immutable
@@ -30,8 +29,6 @@ jobs:
         run: yarn build
       - name: Publish
         run: yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
 
 
 
