chore: Switch from `yarn publish` to `npm publish` in publish-to-npm workflow

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: yarn build
       - name: Publish
-        run: yarn publish
+        run: npm publish
 
 
 
