chore: Add NODE_AUTH_TOKEN environment variable to publish-to-npm workflow

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -29,6 +29,8 @@ jobs:
         run: yarn build
       - name: Publish
         run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ env.NODE_AUTH_TOKEN }}
 
 
 
