--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -19,9 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
-          node-version: '23.5.0'
+          node-version: ${{ vars.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
       - name: Install dependencies
         run: yarn install --immutable
@@ -29,8 +29,6 @@ jobs:
         run: yarn build
       - name: Publish
         run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ env.NODE_AUTH_TOKEN }}
 
 
 
