--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -17,6 +17,7 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
+    needs: checks
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-node@v6
